--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,9 +1,24 @@
-<h1>Original Hats</h1>
+{% extends 'base.html' %}
 
-<ul>
-    
-    <li>{{ hats.name }}</li>
 
-    
+{% block content %}
 
-</ul>
+<h1>WELCOME</h1>
+
+<div class="row">
+    {% for hat in hat %}
+        <div class="col">
+        <div class="card" style="width: 18rem;">
+            <img src="{{ hat.image }}" class="card-img-top" alt="...">
+            <div class="card-body">
+            <h5 class="card-title">{{ hat.name }}</h5>
+            <p class="card-text">{{ hat.desc }}</p>
+            <p class="card-text">Rp {{ hat.price }}00</p>
+            <a href="#" class="btn btn-primary">Beli Sekarang</a>
+            </div>
+          </div>
+        </div>
+    {% endfor %}
+
+
+{% endblock %}
