--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<h1>WELCOME</h1>
+<h1>Mawla Raditya Pambudi, Kelas PBP B</h1>
 
 <div class="row">
     {% for hat in hat %}
