--- a/main/templates/create_mood_entry.html
+++ b/main/templates/create_mood_entry.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} 
 {% block content %}
-<h1>Add New Hat</h1>
+<h1>Tambahkan Topi Disini</h1>
 
 <form method="POST">
   {% csrf_token %}
@@ -16,3 +16,5 @@
 </form>
 
 {% endblock %}
+
+
